# game-of-estimates

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  LICENSE.txt  Makefile  README.md  diesel.toml  docker-compose.yaml  release.py
.github/: dependabot.yml
.github/workflows/: build.yml  rust.yml
components/tower-serve-assets/: Cargo.toml
components/tower-serve-assets/src/: embed.rs  etag.rs  headers.rs  lib.rs  response.rs
components/uactor/: Cargo.toml
components/uactor/src/: blocking.rs  core.rs  lib.rs  nonblocking.rs  tokio.rs
frontend/: .env.development  .eslintrc.json  .gitignore  .prettierignore  .prettierrc.cjs  .prettierrc.js  .prettierrc.mjs  README.md  babel.config.js  create-room.html  eslint.config.js  index.html  package-lock.json  package.json  postcss.config.js  postcss.config.js.bak  svelte.config.js  tsconfig.json  vite.config.ts  webpack.config.js
frontend/.storybook/: main.ts  preview.ts
frontend/messages/: de.json  en.json
frontend/project.inlang/: project_id  settings.json
frontend/public/: base.hbs  index.html
frontend/src/: App.svelte  app.html  basetypes.ts  cards.sass  client.ts  consts.ts  deck.ts  env.d.ts  events.ts  global.d.ts  hooks.server.ts  hooks.ts  index.d.ts  main.js  main.sass  main.ts  store-utils.ts  stores.js  stores.ts
frontend/src/components/: Banner.svelte  Button.svelte  CopyLink.svelte  CreateRoomForm.svelte  DisconnectedMW.svelte  Dropdown.svelte  EstimatesControl.svelte  Footer.svelte  Header.svelte  PlayerEstimate.svelte  RoomContainer.svelte  SelectWithButton.svelte  SingleTextInput.svelte  Switch.svelte
frontend/src/components/atoms/: Box.stories.svelte  Box.svelte  Button.stories.svelte  Button.svelte  Dialog.svelte  PlayerEstimate.svelte  SelectWithButton.svelte  SingleTextInput.svelte  Switch.svelte
frontend/src/components/molecules/: EstimatesControl.svelte
frontend/src/components/organisms/: CreateRoomForm.svelte  DisconnectedMW.svelte  RenamePlayerDialog.svelte  RoomContainer.svelte
frontend/src/entries/: create-room.ts  css.ts  icons.ts  room.ts
frontend/src/ext/: string.ts
frontend/src/i18n/: de.json  de.ts  en.json  en.ts  index.ts  lib.ts
frontend/src/icons/: GitHub.svelte
frontend/src/lib/: i18n.ts
frontend/src/routes/: +layout.svelte  +page.svelte  +page.ts  Home.svelte  Room.svelte  room.svelte
frontend/src/routes/room/: +page.svelte  +page.ts
frontend/src/routes/room/[roomId]/: +page.svelte
frontend/src/styles/: bulma.sass  bulma.scss  cards.sass  colors.sass  colors.scss  icons.scss
frontend/src/styles/bulma-switch/: index.scss
frontend/src/styles/goe/: defaults.scss  main.scss
frontend/src/types/: svelte-routing.d.ts
frontend/static/: browserconfig.xml  site.webmanifest
migrations/2023-08-25-204825_create_rooms/: down.sql  up.sql
src/: actor.rs  assets.rs  game.rs  game_server.rs  lib.rs  main.rs  player.rs  ports.rs  remote.rs  room.rs  server.rs  utils.rs
src/adapters/: sqlx.rs
src/adapters/diesel/: mod.rs  schema.rs
src/templates/: layout.hbs  lobby.html.hbs  room.html.hbs
src/web/: compress.rs  embed.rs  handlebars.rs  i18n.rs  mod.rs  prometheus.rs  see_other.rs
src/web/headers/: accept_encoding.rs  accept_language.rs  common.rs  etag.rs  mod.rs
src/web/metrics/: handler.rs  mod.rs  prometheus.rs  service.rs
