[package]
name = "game-of-estimates"
version = "0.2.0"
authors = ["Richard Liebscher <r1tschy@posteo.de>"]
description = "Simple web planning poker game"
edition = "2018"
license = "MIT"
rust-version = "1.56"
repository = "https://github.com/R1tschY/game-of-estimates"
categories = ["games"]
publish = false

[features]
tls = ["warp/tls"]

[dependencies]
tokio = { version = "^1.28", features = ["macros", "sync", "net", "rt-multi-thread", "time", "signal"] }
env_logger = { version = "^0.10.0", default-features = false }
futures-util = { version = "^0.3.28", default-features = false }
log = "^0.4.17"
serde = { version = "^1.0.156", features = ["derive"] }
serde_json = "^1.0.95"
rand = "^0.8.5"
quick-error = "^2.0.1"
async-trait = "^0.1.68"
uactor = { path = "components/uactor" }
chassis = { git = "https://github.com/R1tschY/chassis.git" }
include_dir = "0.7.3"
warp = { version = "^0.3.5", default-features = false, features = ["websocket"] }
headers = "0.3.8"
sha1 = "0.10.5"
mime_guess = "2.0.4"
mime = "0.3.16"
hex = "0.4.3"
uuid = { version = "1.7.0", features = ["v7"] }
base64 = "0.21.7"
anyhow = "1.0"
time = "0.3.31"

[dependencies.sqlx]
version = "0.7"
default-features = false
features = ["runtime-tokio", "tls-rustls", "postgres", "migrate", "macros", "uuid", "time", "json"]

[dev-dependencies]
ctor = "0.2.0"

[workspace]
members = [
    "components/uactor"
]

[profile.release]
lto = "fat"