[package]
name = "game-of-estimates"
version = "0.2.0"
authors = ["Richard Liebscher <r1tschy@posteo.de>"]
description = "Simple web planning poker game"
edition = "2021"
license = "MIT"
rust-version = "1.70.0"
repository = "https://github.com/R1tschY/game-of-estimates"
categories = ["games"]
publish = false

[features]
default = ["compress-gzip", "compress-zstd"]
tls = []
compress-deflate = ["async-compression/deflate"]
compress-gzip = ["async-compression/gzip"]
compress-brotli = ["async-compression/brotli"]
compress-zstd = ["async-compression/zstd"]

[dependencies]
tokio = { version = "^1.40.0", features = ["macros", "sync", "net", "rt-multi-thread", "time", "signal"] }
env_logger = { version = "^0.11.5", default-features = false }
futures-util = { version = "^0.3.30", default-features = false }
log = "^0.4.22"
serde = { version = "^1.0.210", features = ["derive"] }
serde_json = "^1.0.128"
rand = "^0.8.5"
quick-error = "^2.0.1"
async-trait = "^0.1.83"
uactor = { path = "components/uactor" }
chassis = { git = "https://github.com/R1tschY/chassis.git" }
include_dir = "0.7.4"
sha1 = "0.10.6"
mime_guess = "2.0.5"
mime = "0.3.17"
hex = "0.4.3"
uuid = { version = "1.11.0", features = ["v7"] }
base64 = "0.22.1"
anyhow = "1.0"
time = "0.3"
dotenvy = "0.15.7"
handlebars = { version = "6.1.0", features = ["dir_source"] }
rocket = "0.5.1"
rocket_ws = "0.1.1"
rust-embed = { version = "8.5.0", features = ["mime-guess"] }
prometheus-client = "0.22.3"
async-compression = { version = "0.4.12", optional = true, features = ["tokio"] }

[dependencies.sqlx]
version = "0.8"
default-features = false
features = ["runtime-tokio", "tls-rustls", "postgres", "migrate", "macros", "uuid", "time", "json"]

[dev-dependencies]
ctor = "0.2"

[workspace]
members = [
    "components/uactor"
]

[profile.release]
lto = "fat"