[package]
name = "tower-serve-assets"
version = "0.1.0"
edition = "2024"

[dependencies]
tower-service = "0.3.0"
pin-project-lite = "0.2"
http-body = "1.0.0"
http-body-util = "0.1.0"
http = "1.4.0"
bytes = "1.0.0"
mime = "0.3.0"
base64 = "0.22.0"
rust-embed = { version = "8.0.0", optional = true, features = ["mime-guess"] }
include_dir = { version = "0.7.0", optional = true }
log = "0.4.29"
