[package]
name = "uactor"
description = "micro actor framework"
version = "0.1.0"
authors = ["R1tschY <r1tschy@posteo.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "^0.2.22", features = ["macros", "sync"] }
futures-util = "^0.3.5"
async-trait = "^0.1.40"